# smooth-write

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
.claude/: settings.local.json
src/: __init__.py  app.py  helpers.py  main.py
src/core/: __init__.py  auto_save.py  note.py  storage.py
src/ui/: __init__.py  animations.py  colors.py  editor.py  note_list_item.py  notes_list.py  styles.py
