[project]
name = "smooth-write"
version = "0.1.0"
description = "A smooth, modern writing app with glassmorphism UI"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Frameless-Window>=0.4.0",
]

[project.scripts]
smooth-write = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
